# BWSI-Clownfish

./: README.md  launch.sh  pChallenge_fish  pChallenge_shark  pChallenge_shoreside  pChallenge_treasure  pChallenge_whale  shoreside_base.moos  vehicle_base.bhv  vehicle_base.moos
challenge_all/: .LastOpenedMOOSLogDirectory  fish_base.bhv  fish_launch.sh  launch.sh  shark_base.bhv  shark_launch.sh  shoreside_base.moos  surface_base.moos  targ_1715_Spanish_Fleet.bhv  targ_1715_Spanish_Fleet.moos  targ_1715_Spanish_Fleet.moos++  targ_Andrews_beaked_whale.moos  targ_Andrews_beaked_whale.moos++  targ_Australian_snubfin_dolphin.bhv  targ_Australian_snubfin_dolphin.moos  targ_Australian_snubfin_dolphin.moos++  targ_Bobtail_snipe_eel.moos  targ_Bobtail_snipe_eel.moos++  targ_Cenderawasih_epaulette_shark.bhv  targ_Cenderawasih_epaulette_shark.moos  targ_Cenderawasih_epaulette_shark.moos++  targ_Common_bottlenose_dolphin.bhv  targ_Common_bottlenose_dolphin.moos  targ_Common_bottlenose_dolphin.moos++  targ_Esmeralda.moos  targ_Esmeralda.moos++  targ_Frogfish.bhv  targ_Frogfish.moos  targ_Frogfish.moos++  targ_Ghost_catshark.moos  targ_Ghost_catshark.moos++  targ_Halfmoon.moos  (+58 more)
pChallenge/: CMakeLists.txt  Challenge.cpp  Challenge.h  Challenge_Info.cpp  Challenge_Info.h  Makefile  main.cpp
pChallenge/archive/: Challenge_1.cpp  Challenge_2.cpp  Challenge_2.h  Challenge_3.cpp  Challenge_3.h  Challenge_4.cpp  Challenge_4.h  pChallenge_4.moos
pUnderwater/: CMakeLists.txt  Makefile  Underwater.cpp  Underwater.h  Underwater_Info.cpp  Underwater_Info.h  main.cpp  pUnderwater.moos
(+153 files in other folders)
